[package]
name = "rfcbotbot"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.11"
serde_json = "1.0.67"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
serde = { version = "1.0.147", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
telegram-bot = { git = "https://github.com/CircuitCoder/telegram-bot", branch = "dev", rev = "fcd7e684", default-features = false }
anyhow = "1.0.66"
html-escape = "0.2.12"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
